z-index fix

--- a/css/speedometer.css
+++ b/css/speedometer.css
@@ -99,6 +99,7 @@ body {
   font-size: 60px;
   position: absolute;
   right: 25px;
+  z-index: 2;
 }
 
 #settings-toggle:hover {
@@ -112,6 +113,7 @@ body {
   font-size: 16px;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .debug #geolocation-debug {
